[package]
name = "borgpad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "borgpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "event-cpi"] }
solana-program = "1.18.18"
solana-sdk = "1.18.18"
solana-security-txt = "1.1.1"

[dev-dependencies]
litesvm = "0.1.0"
